# shared-tensor

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: README.md  architecture.md  autostart.md  diagrams.md  lifecycle.md  overview.md  patterns.md
examples/: README.md  __init__.py  async_service.py  basic_service.py  demo_async_vs_sync.py  demo_remote_test.py  example_models.py  example_usage.py  model_service.py  remote_execution_demo.py  simple_test.py  songformer_manual_probe.py  transformers_ipc_benchmark.py  transformers_mutation_check.py  transformers_restore_profile.py  transformers_two_proc_demo.py  transformers_two_proc_trace.py  zero_branch_env.py
scripts/: start_server.sh
shared_tensor/: __init__.py  async_client.py  async_provider.py  async_task.py  client.py  errors.py  jsonrpc.py  managed_object.py  provider.py  runtime.py  server.py  transport.py  utils.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  start_test_server.py  test_async_integration.py  test_async_task.py  test_client_unit.py  test_examples.py  test_logging.py  test_managed_object.py  test_protocol.py  test_provider.py  test_serialization.py  test_server_unit.py  test_structure.py  test_sync_integration.py  test_torch_integration.py
tests/helpers/: deserialize_helper.py
tests/integration/: __init__.py  test_async_system.py  test_client.py  test_jsonrpc_integration.py
tests/pytorch_tests/: __init__.py  models.py  test_model_serialization.py  test_tensor_serialization.py
tests/unit/: __init__.py  test_function_path_resolution.py  test_function_paths.py
tests/utils/: serialization_test_utils.py
